--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>PromptShield – Advanced AI Detection & Encoding Tool</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f9f9f9; margin: 20px; padding: 20px; }
-    #debug { white-space: pre-wrap; color: red; margin-bottom: 10px; }
     textarea { width: 100%; height: 200px; font-size: 14px; padding: 10px; }
     button { padding: 10px 20px; margin: 10px 5px 0 0; font-size: 16px; cursor: pointer; }
     #output, #results { background: #fff; padding: 15px; margin-top: 20px; border: 1px solid #ccc; border-radius: 5px; white-space: pre-wrap; }
@@ -16,10 +15,6 @@
   </style>
 </head>
 <body onload="updateStrictnessDisplay()">
-
-  <!-- Debug console -->
-  <div id="debug">JS debug output will appear here</div>
-
   <h1>PromptShield – Advanced AI Detection & Encoding Tool</h1>
   <div id="controls">
     <button onclick="switchMode('encode')">Encode Instructions</button>
@@ -52,57 +47,49 @@
   </div>
 
   <script>
-    // Global error handler
-    window.onerror = function(message, source, lineno, colno, error) {
-      const debug = document.getElementById('debug');
-      debug.textContent += `Error: ${message} at ${source}:${lineno}:${colno}\n`;
-      return true;  // prevent console error
-    };
-    window.onunhandledrejection = function(evt) {
-      document.getElementById('debug').textContent +=
-        `Promise reject: ${evt.reason}\n`;
-    };
-
     // ---- Utilities ----
     function normalizeText(text) {
-      return text.replace(/[“”]/g,'"')
-                 .replace(/[‘’]/g,"'")
-                 .replace(/—/g,'-')
-                 .replace(/&[a-z]+;/gi,'')
+      return text.replace(/[“”]/g, '"')
+                 .replace(/[‘’]/g, "'")
+                 .replace(/—/g, '-')
+                 .replace(/&[a-z]+;/gi, '')
                  .trim();
     }
     function randomWatermark() {
       const chars = ['\u200B','\u200C','\u200D','\u2060'];
       let seq = '';
-      const len = 5 + Math.floor(Math.random()*10);
-      for (let i=0; i<len; i++) seq += chars[Math.floor(Math.random()*chars.length)];
+      const len = 5 + Math.floor(Math.random() * 10);
+      for (let i = 0; i < len; i++) {
+        seq += chars[Math.floor(Math.random() * chars.length)];
+      }
       return seq;
     }
     function countSyllables(w) {
-      w=w.toLowerCase();
-      if(w.length<=3) return 1;
-      const m=w.match(/[aeiouy]{1,2}/g);
-      return m?m.length:1;
+      w = w.toLowerCase();
+      if (w.length <= 3) return 1;
+      const m = w.match(/[aeiouy]{1,2}/g);
+      return m ? m.length : 1;
     }
     function fleschKincaid(txt) {
-      const sents=(txt.match(/[^.!?]+[.!?]/g)||[]).length;
-      const ws=txt.split(/\s+/);
-      const syl=ws.reduce((a,w)=>a+countSyllables(w),0);
-      const ASL=sents?ws.length/sents:0;
-      const ASW=ws.length?syl/ws.length:0;
-      return 0.39*ASL + 11.8*ASW - 15.59;
+      const sents = (txt.match(/[^.!?]+[.!?]/g) || []).length;
+      const ws = txt.split(/\s+/);
+      const syl = ws.reduce((a, w) => a + countSyllables(w), 0);
+      const ASL = sents ? ws.length / sents : 0;
+      const ASW = ws.length ? syl / ws.length : 0;
+      return 0.39 * ASL + 11.8 * ASW - 15.59;
     }
     function sentimentVariance(pars) {
-      const pos=['good','great','positive','strong','effective','successful','important'];
-      const neg=['weak','bad','problem','issue','difficult','fail','collapse'];
-      const scores=pars.map(p=>{
-        const ws=p.toLowerCase().split(/\W+/);
-        let s=0; ws.forEach(w=>{ if(pos.includes(w)) s++; if(neg.includes(w)) s--; });
-        return ws.length?s/ws.length:0;
+      const pos = ['good','great','positive','strong','effective','successful','important'];
+      const neg = ['weak','bad','problem','issue','difficult','fail','collapse'];
+      const scores = pars.map(p => {
+        const ws = p.toLowerCase().split(/\W+/);
+        let s = 0;
+        ws.forEach(w => { if (pos.includes(w)) s++; if (neg.includes(w)) s--; });
+        return ws.length ? s / ws.length : 0;
       });
-      if(scores.length<2) return 1;
-      const m=scores.reduce((a,b)=>a+b,0)/scores.length;
-      return scores.reduce((a,b)=>a+(b-m)**2,0)/scores.length;
+      if (scores.length < 2) return 1;
+      const m = scores.reduce((a, b) => a + b, 0) / scores.length;
+      return scores.reduce((a, b) => a + (b - m) ** 2, 0) / scores.length;
     }
 
     // ---- Configurable Weights ----
@@ -129,23 +116,100 @@
     // ---- Detection Rules ----
     let watermark = randomWatermark();
     const RULES = [
-      { key:'Watermark',            test:t=>t.includes(watermark),        msg:'💧 Watermark detected.' },
-      { key:'FewContractions',      test:t=>(t.match(/\b(I’m|don’t|can’t|won’t|isn’t|aren’t)\b/gi)||[]).length<4,   msg:'🚫 Few contractions' },
-      { key:'RepetitiveStructures', test:t=>(t.match(/\b(One major reason|Another cause|A third reason|In conclusion)\b/gi)||[]).length>2, msg:'🔁 Repetitive structure' },
-      { key:'ExcessiveTransitions', test:t=>(t.match(/\b(Furthermore|Moreover|Thus|Besides|Finally|Therefore|Additionally|In summary)\b/gi)||[]).length>3, msg:'🌀 Excessive transitions' },
-      { key:'UniformParagraphs',     test:t=>{ const ps=t.split(/\n+/).filter(p=>p.trim()), ls=ps.map(p=>p.split(/\s+/).length), avg=ls.reduce((a,b)=>a+b,0)/ls.length; return ls.length>2&&ls.every(l=>Math.abs(l-avg)<10); }, msg:'📏 Uniform paragraphs' },
-      { key:'NoPersonalVoice',      test:t=>(t.match(/\b(I|we|my|our|you|your)\b/gi)||[]).length<2,                  msg:'🙅‍♂️ No personal voice' },
-      { key:'NumericDensity',       test:t=>{const nums=t.match(/\b\d+(\.\d+)?%?\b/g)||[];return nums.length>t.split(/\s+/).length*0.03;}, msg:'🔢 High numeric density' },
-      { key:'OpinionInsertion',     test:t=>(t.match(/\b(In my opinion|I believe|I think|It is important to note)\b/gi)||[]).length>0, msg:'🗣️ Opinion insertion' },
-      { key:'RhetoricalQuestions',  test:t=>(t.match(/\?\s/g)||[]).length<1,                                    msg:'❓ No questions' },
-      { key:'ReadabilityScore',     test:t=>{const fk=fleschKincaid(t);return fk>35&&fk<60;},                    msg:'📐 Readability range' },
-      { key:'LowLexicalDiversity',  test:t=>{const ws=t.split(/\s+/),uw=new Set(ws.map(w=>w.toLowerCase()));return uw.size/ws.length<0.4;}, msg:'📊 Low diversity' },
-      { key:'PassiveVoice',         test:t=>(t.match(/\b(is|was|were|been|being)\b\s+\w+ed\b/g)||[]).length>2,      msg:'🎭 Passive voice' },
-      { key:'NgramRepetition',      test:t=>{const ws=t.split(/\s+/),tr={};for(let i=0;i<ws.length-2;i++){const g=ws[i]+' '+ws[i+1]+' '+ws[i+2];tr[g]=(tr[g]||0)+1;if(tr[g]>2)return true;}return false;}, msg:'🔂 N-gram repetition' },
-      { key:'SentimentUniformity',  test:t=>{const ps=t.split(/\n+/).filter(p=>p.trim());return sentimentVariance(ps)<0.002;}, msg:'⚖️ Uniform sentiment' },
-      { key:'HedgeWords',           test:t=>(t.match(/\b(possibly|potentially|arguably|perhaps|somewhat)\b/gi)||[]).length>3, msg:'🔍 Hedge words' },
-      { key:'EmojiUsage',           test:t=>(t.match(/[😀-🙏]/g)||[]).length>1,                                  msg:'😊 Emoji usage' },
-      { key:'ComplexPunctuation',   test:t=>(t.match(/[;:,]/g)||[]).length>5,                                   msg:'✍️ Complex punctuation usage' }
+      { key:'Watermark',
+        test: t => t.includes(watermark),
+        msg: '💧 Watermark detected.'
+      },
+      { key:'FewContractions',
+        test: t => (t.match(/\b(I’m|don’t|can’t|won’t|isn’t|aren’t)\b/gi) || []).length < 4,
+        msg: '🚫 Few contractions (formal tone)'
+      },
+      { key:'RepetitiveStructures',
+        test: t => (t.match(/\b(One major reason|Another cause|A third reason|In conclusion)\b/gi) || []).length > 2,
+        msg: '🔁 Repetitive structure'
+      },
+      { key:'ExcessiveTransitions',
+        test: t => (t.match(/\b(Furthermore|Moreover|Thus|Besides|Finally|Therefore|Additionally|In summary)\b/gi) || []).length > 3,
+        msg: '🌀 Excessive transitions'
+      },
+      { key:'UniformParagraphs',
+        test: t => {
+          const ps = t.split(/\n+/).filter(p => p.trim());
+          const ls = ps.map(p => p.split(/\s+/).length);
+          const avg = ls.reduce((a,b) => a+b, 0) / ls.length;
+          return ls.length > 2 && ls.every(l => Math.abs(l - avg) < 10);
+        },
+        msg: '📏 Uniform paragraphs'
+      },
+      { key:'NoPersonalVoice',
+        test: t => (t.match(/\b(I|we|my|our|you|your)\b/gi) || []).length < 2,
+        msg: '🙅‍♂️ No personal voice'
+      },
+      { key:'NumericDensity',
+        test: t => {
+          const nums = t.match(/\b\d+(\.\d+)?%?\b/g) || [];
+          return nums.length > t.split(/\s+/).length * 0.03;
+        },
+        msg: '🔢 High numeric density'
+      },
+      { key:'OpinionInsertion',
+        test: t => (t.match(/\b(In my opinion|I believe|I think|It is important to note)\b/gi) || []).length > 0,
+        msg: '🗣️ Opinion insertion'
+      },
+      { key:'RhetoricalQuestions',
+        test: t => (t.match(/\?\s/g) || []).length < 1,
+        msg: '❓ No questions'
+      },
+      { key:'ReadabilityScore',
+        test: t => {
+          const fk = fleschKincaid(t);
+          return fk > 35 && fk < 60;
+        },
+        msg: '📐 Readability range'
+      },
+      { key:'LowLexicalDiversity',
+        test: t => {
+          const ws = t.split(/\s+/), uw = new Set(ws.map(w => w.toLowerCase()));
+          return uw.size / ws.length < 0.4;
+        },
+        msg: '📊 Low diversity'
+      },
+      { key:'PassiveVoice',
+        test: t => (t.match(/\b(is|was|were|been|being)\b\s+\w+ed\b/g) || []).length > 2,
+        msg: '🎭 Passive voice'
+      },
+      { key:'NgramRepetition',
+        test: t => {
+          const ws = t.split(/\s+/), tr = {};
+          for (let i=0; i<ws.length-2; i++){
+            const g = ws[i]+' '+ws[i+1]+' '+ws[i+2];
+            tr[g] = (tr[g]||0)+1;
+            if (tr[g] > 2) return true;
+          }
+          return false;
+        },
+        msg: '🔂 N-gram repetition'
+      },
+      { key:'SentimentUniformity',
+        test: t => {
+          const ps = t.split(/\n+/).filter(p => p.trim());
+          return sentimentVariance(ps) < 0.002;
+        },
+        msg: '⚖️ Uniform sentiment'
+      },
+      { key:'HedgeWords',
+        test: t => (t.match(/\b(possibly|potentially|arguably|perhaps|somewhat)\b/gi) || []).length > 3,
+        msg: '🔍 Hedge words'
+      },
+      { key:'EmojiUsage',
+        // fixed invalid range by using Unicode property
+        test: t => /\p{Emoji}/u.test(t),
+        msg: '😊 Frequent emoji usage'
+      },
+      { key:'ComplexPunctuation',
+        test: t => (t.match(/[;:,]/g) || []).length > 5,
+        msg: '✍️ Complex punctuation usage'
+      }
     ];
 
     let reportData = {};
@@ -186,32 +250,33 @@
       document.getElementById('spinner').style.display='none';
       const ws = txt.split(/\s+/).filter(w=>w);
       if(ws.length<50){
-        document.getElementById('results').innerText='Not enough data'; return;
+        document.getElementById('results').innerText='Not enough data to judge.';
+        return;
       }
       const strict = parseFloat(
         document.getElementById('strictnessSlider').value
       );
-      let score=0,m=[],d=[];
-      RULES.forEach(r=>{
-        if(r.test(txt)){
-          const w = WEIGHTS[r.key]*strict;
-          score+=w; m.push(r.msg); d.push({name:r.key,value:w});
+      let score=0, msgs=[], details=[];
+      RULES.forEach(r => {
+        if(r.test(txt)) {
+          const w = WEIGHTS[r.key] * strict;
+          score += w; msgs.push(r.msg); details.push({name:r.key, value:w});
         }
       });
-      const finalScore=Math.min(10,score).toFixed(1),
-            like= score>5?'High':'Moderate';
-      reportData={score:finalScore,likelihood:like,details:d};
-      document.getElementById('results').innerHTML=
-        `<strong>AI Score: ${finalScore}/10</strong><br>`+
-        `<strong>Likely:</strong> ${like}`+
-        `<ul><li>${m.join('</li><li>')}</li></ul>`;
-      const cctx = document.getElementById('scoreChart').getContext('2d');
-      cctx.clearRect(0,0,800,600);
-      d.forEach((f,i)=>{
-        cctx.fillStyle='#4a90e2';
-        cctx.fillRect(200,i*40+20,f.value*40,25);
-        cctx.fillStyle='#000';
-        cctx.fillText(f.name+': '+f.value.toFixed(1),10,i*40+35);
+      const finalScore = Math.min(10,score).toFixed(1),
+            likelihood = score>5?'High':'Moderate';
+      reportData = { score: finalScore, likelihood, details };
+      document.getElementById('results').innerHTML =
+        `<strong>AI Match Score: ${finalScore}/10</strong><br>` +
+        `<strong>Likelihood:</strong> ${likelihood}` +
+        `<ul><li>${msgs.join('</li><li>')}</li></ul>`;
+      const ctx = document.getElementById('scoreChart').getContext('2d');
+      ctx.clearRect(0,0,800,600);
+      details.forEach((f,i)=>{
+        ctx.fillStyle='#4a90e2';
+        ctx.fillRect(200, i*40+20, f.value*40, 25);
+        ctx.fillStyle='#000';
+        ctx.fillText(`${f.name}: ${f.value.toFixed(1)}`, 10, i*40+35);
       });
     }
     function clearDetect() {
@@ -221,10 +286,10 @@
         .clearRect(0,0,800,600);
     }
     function exportReport() {
-      const blob=new Blob([JSON.stringify(reportData,null,2)],{type:'application/json'});
-      const url=URL.createObjectURL(blob);
-      const a=document.createElement('a');
-      a.href=url; a.download='report.json'; a.click();
+      const blob = new Blob([JSON.stringify(reportData,null,2)],{type:'application/json'});
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url; a.download = 'ai_detection_report.json'; a.click();
       URL.revokeObjectURL(url);
     }
   </script>
