--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
       navigator.clipboard.writeText(document.getElementById('output').innerText).then(()=>alert('Copied!'));
     }
 
+    let reportData = {};
     let watermark = randomWatermark();
+
     const WEIGHTS = {
       Watermark: 5,
       FewContractions: 2,
@@ -112,17 +114,10 @@
       { key:'NumericDensity', test:t=>{ const nums=t.match(/\b\d+(\.\d+)?%?\b/g)||[]; return nums.length>t.split(/\s+/).length*0.03; }, msg:'🔢 High numeric density' },
       { key:'OpinionInsertion', test:t=>(t.match(/\b(In my opinion|I believe|I think|It is important to note)\b/gi)||[]).length>0, msg:'🗣️ Opinion insertion' },
       { key:'RhetoricalQuestions', test:t=>(t.match(/\?\s/g)||[]).length<1, msg:'❓ No questions' },
-      { key:'ReadabilityScore', test:t=>{ const sents=(t.match(/[^.!?]+[.!?]/g)||[]).length; const ws=t.split(/\s+/); const syl=ws.reduce((a,w)=>a + (w.match(/[aeiouy]{1,2}/g)||[]).length,0); const ASL=sents?ws.length/sents:0; const ASW=ws.length?syl/ws.length:0; const fk=0.39*ASL+11.8*ASW-15.59; return fk>35&&fk<60; }, msg:'📐 Readability range' },
       { key:'LowLexicalDiversity', test:t=>{ const ws=t.split(/\s+/), uw=new Set(ws.map(w=>w.toLowerCase())); return uw.size/ws.length<0.4; }, msg:'📊 Low lexical diversity' },
       { key:'PassiveVoice', test:t=>(t.match(/\b(is|was|were|been|being)\b\s+\w+ed\b/g)||[]).length>2, msg:'🎭 Passive voice' },
       { key:'NgramRepetition', test:t=>{ const ws=t.split(/\s+/), tr={}; for(let i=0;i<ws.length-2;i++){ const g=ws[i]+' '+ws[i+1]+' '+ws[i+2]; tr[g]=(tr[g]||0)+1; if(tr[g]>2)return true;} return false; }, msg:'🔂 N-gram repetition' },
-      { key:'SentimentUniformity', test:t=>{ const ps=t.split(/\n+/).filter(p=>p.trim()); const scores=ps.map(p=>{const ws=p.toLowerCase().split(/\W+/);let s=0;ws.forEach(w=>{if(['good','great','positive','strong','effective','important'].includes(w))s++;if(['weak','bad','problem','issue','fail'].includes(w))s--;});return ws.length?s/ws.length:0;});if(scores.length<2)return false;const m=scores.reduce((a,b)=>a+b,0)/scores.length;return scores.reduce((a,b)=>a+(b-m)**2,0)/scores.length<0.002; }, msg:'⚖️ Uniform sentiment' },
       { key:'HedgeWords', test:t=>(t.match(/\b(possibly|potentially|arguably|perhaps|somewhat)\b/gi)||[]).length>3, msg:'🔍 Hedge words' },
-      { key:'AdverbOveruse', test:t=>(t.match(/\b\w+ly\b/gi)||[]).length>10, msg:'🔍 Excessive adverb use' },
-      { key:'ClichePhrases', test:t=>{ const c=['at the end of the day',"in today's society",'the fact of the matter','think outside the box','going forward','level playing field']; return c.filter(p=>t.toLowerCase().includes(p)).length>1; }, msg:'⚠️ Multiple cliché phrases' },
-      { key:'LongSentences', test:t=>{ const s=t.match(/[^.!?]+[.!?]/g)||[]; if(!s.length)return false; const avg=s.reduce((sum,x)=>sum+x.split(/\s+/).length,0)/s.length; return avg>25; }, msg:'📏 Avg sentence > 25 words' },
-      { key:'EllipsisUsage', test:t=>(t.match(/…|\.\.\./g)||[]).length>1, msg:'… Ellipsis overuse' },
-      { key:'EmDashUsage', test:t=>(t.match(/—/g)||[]).length>2, msg:'— Heavy em-dash use' },
       {
         key:'PunctuationSpacing',
         invert:true,
@@ -143,16 +138,20 @@
           return inconsistentBlocks>=2;
         },
         msg:'⌛ Multiple blocks with inconsistent spacing suggest human tell'
-      },
-      { key:'EmojiUsage', test:t=>(t.match(/[\u{1F300}-\u{1F6FF}\u{1F900}-\u{1F9FF}]/ug)||[]).length>0, msg:'😊 Frequent emoji usage' },
-      { key:'ComplexPunctuation', test:t=>(t.match(/[;:,]/g)||[]).length>5, msg:'✍️ Complex punctuation usage' }
+      }
     ];
+
+    function startDetection() {
+      document.getElementById('spinner').style.display='block';
+      setTimeout(detectAI, 50);
+    }
 
     function detectAI() {
       const txt = normalizeText(document.getElementById('detectInput').value);
       document.getElementById('spinner').style.display='none';
       const strict = parseFloat(document.getElementById('strictnessSlider').value);
       let score = 0, msgs = [], details = [];
+
       RULES.forEach(r => {
         if (r.test(txt)) {
           const w = WEIGHTS[r.key] * strict;
@@ -161,8 +160,10 @@
           details.push({ name: r.key, value: Math.abs(w), isHuman: !!r.invert });
         }
       });
+
       const finalScore = Math.min(10, Math.max(0, score)).toFixed(1);
       const likelihood = finalScore > 5 ? 'High' : 'Moderate';
+      reportData = { score: finalScore, likelihood, details };
       document.getElementById('results').innerHTML =
         `<strong>AI Match Score: ${finalScore}/10</strong><br><strong>Likelihood:</strong> ${likelihood}` +
         `<ul><li>${msgs.join('</li><li>')}</li></ul>`;
